# recipe-index

./: .gitignore  README.md  api.py  app.py  infer.py  main.py  pyproject.toml  requirements.txt  truncate_data.py
frontend/: package-lock.json
frontend/src/app/: page.tsx
frontend/src/app/recipe/[id]/: page.tsx
recipe_model/: bigram_model.pkl  recipe-model.ipynb  recipe_clusterer.joblib  recipe_pca.joblib
